# ground-control

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.ia/: ARCHITECTURE.md  (+7 more)
apps/sidecar/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
apps/sidecar/agent-dist/: .gitignore  .gitkeep
apps/sidecar/alembic/: env.py
apps/sidecar/alembic/versions/: 0001_initial_schema.py  0002_rls_baseline.py  0003_force_rls_tenant.py  0004_contract_enums.py  0005_contract_core.py  0006_catalog_scope.py  0007_cycle_consumption.py  0008_policy_ticketlink.py  0009_rls_znuny_instance.py  0010_balance_view.py  0011_tenant_branding.py  0012_portal_user_role.py  0013_consumption_sync_cursor.py  0014_agent_timer.py  0015_csat.py  0016_ai_generation_log.py  0017_invoice.py  0018_automation.py  0019_agent_inventory.py  0020_ai_assist_kind.py  (+1 more)
apps/sidecar/scripts/: demo_contract.py  e2e_prod_check.py  seed_demo_branding.py  seed_demo_contracts.py
apps/sidecar/tests/: conftest.py  test_adjustment_service.py  test_admin_agents_router.py  test_admin_ai_router.py  test_admin_analytics_router.py  test_admin_auth.py  test_admin_automation_router.py  test_admin_contracts.py  test_admin_e2e.py  test_admin_invoices_router.py  test_admin_phase0_smoke.py  test_admin_tenants.py  test_admin_timer_router.py  test_agent_dist_router.py  test_agent_enroll_service.py  test_agent_get_articles.py  test_agent_router.py  test_agent_secrets.py  test_ai_assist_service.py  test_ai_service.py  test_asaas_client.py  test_assets_no_direct_znuny.py  test_assets_router.py  test_auth_login_router.py  test_auth_login_znuny_login.py  test_auth_session.py  test_automation_actions.py  test_automation_engine.py  test_automation_eval.py  test_branding_router.py  test_config.py  test_config_item_upsert_client.py  test_config_session_secret.py  test_consumo_no_direct_znuny.py  test_consumption_service.py  test_contract_consumption_router.py  test_contract_detail_router.py  test_contract_domain_e2e.py  test_contract_read_service.py  test_contract_series_router.py  (+66 more)
e2e/: .gitignore  README.md  config.py  conftest.py  helpers.py  pyproject.toml  test_admin.py  test_portal.py
(+387 files in other folders)
