[project]
name = "gerti-sidecar"
version = "0.1.0"
description = "Gerti Service Desk Sidecar API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "WAS Soluções em Tecnologia" }]

dependencies = [
    "fastapi[standard]>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.14.0,<1.15",
    "pydantic>=2.9.0,<2.10",
    "pydantic-settings>=2.6.0,<2.7",
    "python-multipart>=0.0.20,<0.1",
    "httpx>=0.28.0,<0.29",
    "structlog>=24.4.0,<25",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=6.0.0,<7",
    "testcontainers[postgres]>=4.8.0,<5",
    "ruff>=0.8.0,<0.9",
    "mypy>=1.13.0,<1.14",
    "asgi-lifespan>=2.1.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gerti_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # asserts em testes são OK

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"src/gerti_sidecar/routers/**" = ["B008"]  # FastAPI Depends() em defaults é idiomático
"src/gerti_sidecar/auth/**" = ["B008"]  # FastAPI Depends() em defaults é idiomático
"src/gerti_sidecar/config.py" = ["S105"]  # default dev placeholder; valor real vem de env (12-factor)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2,<4",
]
